Project background gifs are selected.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,11 @@ html {
 .carousel-inner,
 .carousel-item,
 .carousel-item img {
-    height: 100%;
+    height: 100vh;
+}
+
+.carousel-item img {
+    object-fit: cover;
 }
 
 #logo {
