--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,8 @@ h1 {
 
 #infobanner {
     margin-top: 250px;
+    max-height: calc(100vh - 250px); /* fit the given space
+    overflow-y: hidden; /* delete vertical scrollbar even if the content overflows */
 }
 
 .footerOther {
@@ -178,7 +180,7 @@ h1 {
     background-color: #16161C;
     border-radius: 30px !important;
     padding: 20px;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .team {
@@ -229,7 +231,7 @@ h1 {
 
 .conField:focus + .conButton {
     opacity: 1;
-    left: 84%;
+    left: 77%;
     z-index: 2;
     background: #222;
     color: white;
@@ -422,7 +424,7 @@ h1 {
   -webkit-text-fill-color: transparent;
   background-repeat: no-repeat;
   background-size: 80%;
-  animation: shine 5s linear infinite;
+  animation: shine 3s linear infinite;
   position: relative;
 }
 
