--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ html {
 #banner {
     width: 100%;
     height: 100%;
-    background-image: url(../pictures/background.gif);
+    background-image: url(../pictures/world2.gif);
     position: fixed;
     z-index: -1;
 }
