--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ h1 {
 
 .col-md-3, .team {
     height: 350px;
-    width: 50%;
+    width: 90%;
     background-color: #16161C;
     border-radius: 30px !important;
     padding: 20px;
@@ -186,7 +186,7 @@ h1 {
 }
 
 .team {
-    margin-left: 25%;
+    margin-left: 5%;
 }
 
 .connection {
@@ -264,8 +264,12 @@ h1 {
     height: 100px;
 }
 .profile-img{
-    height: 280px;
+    height: 150px;
     border-radius: 50%;
+}
+
+.profile-info{
+    display: flex;
 }
 
 @media screen and (max-width: 576px) {
