--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,16 @@ html {
     background-position: calc(50% + 200px) calc(50% + 200px);
 }
 
+#banner-aboutus {
+    width: 100%;
+    height: 100%;
+    background-image: url(../pictures/eyes.gif);
+    background-repeat: no-repeat;
+    position: fixed;
+    z-index: -1;
+    background-position: calc(50% - 100px) calc(50% - 150px);
+}
+
 #background,
 #myCarousel,
 .carousel-inner,
