--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,13 @@ body {
     overflow-x: hidden;
 }
 
+.body-publications {
+    width: 100%;
+    height: 100%;
+    background-color: #161616;
+    overflow-x: hidden;
+}
+
 html {
     height: 100%;
     width: 100%;
@@ -33,6 +40,16 @@ html {
     position: fixed;
     z-index: -1;
     background-position: calc(50% - 100px) calc(50% - 150px);
+}
+
+#banner-publications {
+    width: 100%;
+    height: 100%;
+    background-image: url(../pictures/color-hexagon.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: fixed;
+    z-index: -1;
 }
 
 #background,
@@ -158,7 +175,13 @@ h1 {
 
 #infobanner {
     margin-top: 250px;
-    /*max-height: calc(100vh - 250px); /* fit the given space */
+    max-height: calc(100vh - 250px); /* fit the given space */
+    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
+}
+
+#infobanner2 {
+    margin-top: 50px;
+    max-height: calc(100vh - 250px); /* fit the given space */
     /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
 }
 
